--- a/index.html
+++ b/index.html
@@ -24,8 +24,18 @@
             </ul>
         </nav>
         <ul class="outsite-nav list">
-            <li class="item"><a href="mailto:info@devstudio.com" class="secondary-link">info@devstudio.com</a></li>
-            <li class="item"><a href="tel:+380961111111" class="secondary-link">+38 096 111 11 11</a></li>
+            <li class="item">
+                <a href="mailto:info@devstudio.com" class="secondary-link">
+                    <svg class="icon-enveloper" width="16" height="12">
+                        <use href="./images/icons.svg#icon-envelope"></use>
+                    </svg>
+                 info@devstudio.com</a>
+            </li>
+            <li class="item"><a href="tel:+380961111111" class="secondary-link">
+                <svg class="icon-smartphone" width="10" height="16">
+                    <use href="./images/icons.svg#icon-smartphone"></use>
+                </svg>
+                +38 096 111 11 11</a></li>
         </ul>
     </div>
 </header>
@@ -43,18 +53,38 @@
             <h2 class="visually-hidden">Наші переваги</h2>
             <ul class="feature-list list">
                 <li class="item">
+                    <div class="feature-background">
+                        <svg width="70" height="70">
+                            <use href="./images/icons.svg#icon-antenna-1"></use>
+                        </svg>
+                    </div>
                     <h3 class="title">УВАГА ДО ДЕТАЛЕЙ</h3>
                     <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
                 </li>
                 <li class="item">
+                    <div class="feature-background">
+                        <svg width="70" height="70">
+                            <use href="./images/icons.svg#icon-clock-1"></use>
+                        </svg>
+                    </div>
                     <h3 class="title">ПУНКТУАЛЬНІСТЬ</h3>
                     <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
                 </li>
                 <li class="item">
+                    <div class="feature-background">
+                        <svg width="70" height="70">
+                            <use href="./images/icons.svg#icon-diagram-1"></use>
+                        </svg>
+                    </div>
                     <h3 class="title">ПЛАНУВАННЯ</h3>
                     <p>Так само консультація з широким активом значною мірою зумовлює.</p>
                 </li >
                 <li class="item">
+                    <div class="feature-background">
+                        <svg width="70" height="70">
+                            <use href="./images/icons.svg#icon-astronaut-1"></use>
+                        </svg>
+                    </div>
                     <h3 class="title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
                     <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
                 </li>
