--- a/index.html
+++ b/index.html
@@ -119,12 +119,60 @@
                         <h3 class="title">Ігор Дем'яненко</h3>
                         <p class="item" lang="en">Product Designer</p>
                     </div>
+                    <div class="link-position">
+                        <ul class="social list">
+                            <li class="social-background item">
+                                <svg width="20" height="20">
+                                    <use href="./images/icons.svg#icon-instagram-2"></use>
+                                </svg>
+                            </li>
+                            <li class="social-background item">
+                                <svg width="20" height="20">
+                                    <use href="./images/icons.svg#icon-twitter-1"></use>
+                                </svg>
+                            </li>
+                            <li class="social-background item">
+                                <svg width="20" height="20">
+                                    <use href="./images/icons.svg#icon-facebook-1"></use>
+                                </svg>
+                            </li>
+                            <li class="social-background item">
+                                <svg width="20" height="20">
+                                    <use href="./images/icons.svg#icon-linkedin-1"></use>
+                                </svg>
+                            </li>
+                        </ul>
+                    </div>
                 </li>
                 <li class="card">
                     <img src="./images/photo2.jpg" alt="Фото Ольга Рєпіна" width="270">
                     <div class="name">
                         <h3 class="title">Ольга Рєпіна</h3>
                         <p class="item" lang="en">Frontend Developer</p>
+                    </div>
+                    <div class="link-position">
+                        <ul class="social list">
+                            <li class="social-background item">
+                                <svg width="20" height="20">
+                                    <use href="./images/icons.svg#icon-instagram-2"></use>
+                                </svg>
+                            </li>
+                            <li class="social-background item">
+                                <svg width="20" height="20">
+                                    <use href="./images/icons.svg#icon-twitter-1"></use>
+                                </svg>
+                            </li>
+                            <li class="social-background item">
+                                <svg width="20" height="20">
+                                    <use href="./images/icons.svg#icon-facebook-1"></use>
+                                </svg>
+                            </li>
+                            <li class="social-background item">
+                                <svg width="20" height="20">
+                                    <use href="./images/icons.svg#icon-linkedin-1"></use>
+                                </svg>
+                            </li>
+                        </ul>
                     </div>
                 </li>
                 <li class="card">
@@ -133,12 +181,60 @@
                         <h3 class="title">Микола Тарасов</h3>
                         <p class="item" lang="en">Marketing</p>
                     </div>
+                    <div class="link-position">
+                        <ul class="social list">
+                            <li class="social-background item">
+                                <svg width="20" height="20">
+                                    <use href="./images/icons.svg#icon-instagram-2"></use>
+                                </svg>
+                            </li>
+                            <li class="social-background item">
+                                <svg width="20" height="20">
+                                    <use href="./images/icons.svg#icon-twitter-1"></use>
+                                </svg>
+                            </li>
+                            <li class="social-background item">
+                                <svg width="20" height="20">
+                                    <use href="./images/icons.svg#icon-facebook-1"></use>
+                                </svg>
+                            </li>
+                            <li class="social-background item">
+                                <svg width="20" height="20">
+                                    <use href="./images/icons.svg#icon-linkedin-1"></use>
+                                </svg>
+                            </li>
+                        </ul>
+                    </div>
                 </li>
                 <li class="card">
                     <img src="./images/photo4.jpg" alt="Фото Михайло Єрмаков" width="270">
                     <div class="name">
                         <h3 class="title">Михайло Єрмаков</h3>
                         <p class="item" lang="en">UI Designer</p>
+                    </div>
+                    <div class="link-position">
+                        <ul class="social list">
+                            <li class="social-background item">
+                                <svg width="20" height="20">
+                                    <use href="./images/icons.svg#icon-instagram-2"></use>
+                                </svg>
+                            </li>
+                            <li class="social-background item">
+                                <svg width="20" height="20">
+                                    <use href="./images/icons.svg#icon-twitter-1"></use>
+                                </svg>
+                            </li>
+                            <li class="social-background item">
+                                <svg width="20" height="20">
+                                    <use href="./images/icons.svg#icon-facebook-1"></use>
+                                </svg>
+                            </li>
+                            <li class="social-background item">
+                                <svg width="20" height="20">
+                                    <use href="./images/icons.svg#icon-linkedin-1"></use>
+                                </svg>
+                            </li>
+                        </ul>
                     </div>
                 </li>
             </ul>
