--- a/index.html
+++ b/index.html
@@ -240,6 +240,22 @@
             </ul>
         </div>
     </section>
+    <!-- Наші клієнти -->
+    <section class="client section">
+        <div class="container">
+            <h2 class="htitle">Постійні клієнти</h2>
+            <ul class="clients list">
+                <li>
+                    <div class="clients-card">
+                        <svg width="106" height="60">
+                            <use href="./images/icons.svg#icon-Logo-5"></use>
+                        </svg>
+                    </div>
+                </li>
+            </ul>
+
+        </div>
+    </section>
 </main>
 <!--Футер-->
 <footer class="footer">
