--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
             <li class="item">
                 <a href="mailto:info@devstudio.com" class="secondary-link">
                     <svg class="icon-enveloper" width="16" height="12">
-                        <use href="./images/icons.svg#icon-envelope"></use>
+                        <use href="./images/icon.svg#icon-envelope"></use>
                     </svg>
                  info@devstudio.com</a>
             </li>
             <li class="item"><a href="tel:+380961111111" class="secondary-link">
                 <svg class="icon-smartphone" width="10" height="16">
-                    <use href="./images/icons.svg#icon-smartphone"></use>
+                    <use href="./images/icon.svg#icon-smartphone"></use>
                 </svg>
                 +38 096 111 11 11</a></li>
         </ul>
@@ -55,7 +55,7 @@
                 <li class="item">
                     <div class="feature-background">
                         <svg width="70" height="70">
-                            <use href="./images/icons.svg#icon-antenna-1"></use>
+                            <use href="./images/icon.svg#icon-antenna-1"></use>
                         </svg>
                     </div>
                     <h3 class="title">УВАГА ДО ДЕТАЛЕЙ</h3>
@@ -64,7 +64,7 @@
                 <li class="item">
                     <div class="feature-background">
                         <svg width="70" height="70">
-                            <use href="./images/icons.svg#icon-clock-1"></use>
+                            <use href="./images/icon.svg#icon-clock-1"></use>
                         </svg>
                     </div>
                     <h3 class="title">ПУНКТУАЛЬНІСТЬ</h3>
@@ -73,7 +73,7 @@
                 <li class="item">
                     <div class="feature-background">
                         <svg width="70" height="70">
-                            <use href="./images/icons.svg#icon-diagram-1"></use>
+                            <use href="./images/icon.svg#icon-diagram-1"></use>
                         </svg>
                     </div>
                     <h3 class="title">ПЛАНУВАННЯ</h3>
@@ -82,7 +82,7 @@
                 <li class="item">
                     <div class="feature-background">
                         <svg width="70" height="70">
-                            <use href="./images/icons.svg#icon-astronaut-1"></use>
+                            <use href="./images/icon.svg#icon-astronaut-1"></use>
                         </svg>
                     </div>
                     <h3 class="title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
@@ -123,22 +123,22 @@
                         <ul class="social list">
                             <li class="social-background item">
                                 <svg width="20" height="20">
-                                    <use href="./images/icons.svg#icon-instagram-2"></use>
+                                    <use href="./images/icon.svg#icon-instagram-2"></use>
                                 </svg>
                             </li>
                             <li class="social-background item">
                                 <svg width="20" height="20">
-                                    <use href="./images/icons.svg#icon-twitter-1"></use>
+                                    <use href="./images/icon.svg#icon-twitter-1"></use>
                                 </svg>
                             </li>
                             <li class="social-background item">
                                 <svg width="20" height="20">
-                                    <use href="./images/icons.svg#icon-facebook-1"></use>
+                                    <use href="./images/icon.svg#icon-facebook-1"></use>
                                 </svg>
                             </li>
                             <li class="social-background item">
                                 <svg width="20" height="20">
-                                    <use href="./images/icons.svg#icon-linkedin-1"></use>
+                                    <use href="./images/icon.svg#icon-linkedin-1"></use>
                                 </svg>
                             </li>
                         </ul>
@@ -154,22 +154,22 @@
                         <ul class="social list">
                             <li class="social-background item">
                                 <svg width="20" height="20">
-                                    <use href="./images/icons.svg#icon-instagram-2"></use>
+                                    <use href="./images/icon.svg#icon-instagram-2"></use>
                                 </svg>
                             </li>
                             <li class="social-background item">
                                 <svg width="20" height="20">
-                                    <use href="./images/icons.svg#icon-twitter-1"></use>
+                                    <use href="./images/icon.svg#icon-twitter-1"></use>
                                 </svg>
                             </li>
                             <li class="social-background item">
                                 <svg width="20" height="20">
-                                    <use href="./images/icons.svg#icon-facebook-1"></use>
+                                    <use href="./images/icon.svg#icon-facebook-1"></use>
                                 </svg>
                             </li>
                             <li class="social-background item">
                                 <svg width="20" height="20">
-                                    <use href="./images/icons.svg#icon-linkedin-1"></use>
+                                    <use href="./images/icon.svg#icon-linkedin-1"></use>
                                 </svg>
                             </li>
                         </ul>
@@ -185,22 +185,22 @@
                         <ul class="social list">
                             <li class="social-background item">
                                 <svg width="20" height="20">
-                                    <use href="./images/icons.svg#icon-instagram-2"></use>
+                                    <use href="./images/icon.svg#icon-instagram-2"></use>
                                 </svg>
                             </li>
                             <li class="social-background item">
                                 <svg width="20" height="20">
-                                    <use href="./images/icons.svg#icon-twitter-1"></use>
+                                    <use href="./images/icon.svg#icon-twitter-1"></use>
                                 </svg>
                             </li>
                             <li class="social-background item">
                                 <svg width="20" height="20">
-                                    <use href="./images/icons.svg#icon-facebook-1"></use>
+                                    <use href="./images/icon.svg#icon-facebook-1"></use>
                                 </svg>
                             </li>
                             <li class="social-background item">
                                 <svg width="20" height="20">
-                                    <use href="./images/icons.svg#icon-linkedin-1"></use>
+                                    <use href="./images/icon.svg#icon-linkedin-1"></use>
                                 </svg>
                             </li>
                         </ul>
@@ -216,22 +216,22 @@
                         <ul class="social list">
                             <li class="social-background item">
                                 <svg width="20" height="20">
-                                    <use href="./images/icons.svg#icon-instagram-2"></use>
+                                    <use href="./images/icon.svg#icon-instagram-2"></use>
                                 </svg>
                             </li>
                             <li class="social-background item">
                                 <svg width="20" height="20">
-                                    <use href="./images/icons.svg#icon-twitter-1"></use>
+                                    <use href="./images/icon.svg#icon-twitter-1"></use>
                                 </svg>
                             </li>
                             <li class="social-background item">
                                 <svg width="20" height="20">
-                                    <use href="./images/icons.svg#icon-facebook-1"></use>
+                                    <use href="./images/icon.svg#icon-facebook-1"></use>
                                 </svg>
                             </li>
                             <li class="social-background item">
                                 <svg width="20" height="20">
-                                    <use href="./images/icons.svg#icon-linkedin-1"></use>
+                                    <use href="./images/icon.svg#icon-linkedin-1"></use>
                                 </svg>
                             </li>
                         </ul>
@@ -248,7 +248,7 @@
                 <li>
                     <div class="clients-card">
                         <svg width="106" height="60">
-                            <use href="./images/icons.svg#icon-Logo-5"></use>
+                            <use href="./images/icon.svg#icon-Logo"></use>
                         </svg>
                     </div>
                 </li>
