--- a/index.html
+++ b/index.html
@@ -245,12 +245,35 @@
         <div class="container">
             <h2 class="htitle">Постійні клієнти</h2>
             <ul class="clients list">
-                <li>
-                    <div class="clients-card">
+                <li class="clients-card">
                         <svg width="106" height="60">
                             <use href="./images/icon.svg#icon-Logo"></use>
                         </svg>
-                    </div>
+                </li>
+                <li class="clients-card">
+                        <svg width="106" height="60">
+                            <use href="./images/icon.svg#icon-Logo-1"></use>
+                        </svg>
+                </li>
+                <li class="clients-card">
+                        <svg width="106" height="60">
+                            <use href="./images/icon.svg#icon-Logo-2"></use>
+                        </svg>
+                </li>
+                <li class="clients-card">
+                        <svg width="106" height="60">
+                            <use href="./images/icon.svg#icon-Logo-3"></use>
+                        </svg>
+                </li>
+                <li class="clients-card">
+                        <svg width="106" height="60">
+                            <use href="./images/icon.svg#icon-Logo-4"></use>
+                        </svg>
+                </li>
+                <li class="clients-card">
+                    <svg width="106" height="60">
+                        <use href="./images/icon.svg#icon-Logo-5"></use>
+                    </svg>
                 </li>
             </ul>
 
@@ -270,6 +293,31 @@
                 </li>
                 <li class="item"><a href="tel:+380991111111" class="secondary-link">+38 099 111 11 11</a></li>
             </ul>
+            <div class="link-position-footer">
+                <h2>Приєднуйтесь</h2>
+                <ul class="social list">
+                    <li class="social-background-footer item">
+                        <svg width="20" height="20">
+                            <use href="./images/icon.svg#icon-instagram-2"></use>
+                        </svg>
+                    </li>
+                    <li class="social-background-footer item">
+                        <svg width="20" height="20">
+                            <use href="./images/icon.svg#icon-twitter-1"></use>
+                        </svg>
+                    </li>
+                    <li class="social-background-footer item">
+                        <svg width="20" height="20">
+                            <use href="./images/icon.svg#icon-facebook-1"></use>
+                        </svg>
+                    </li>
+                    <li class="social-background-footer item">
+                        <svg width="20" height="20">
+                            <use href="./images/icon.svg#icon-linkedin-1"></use>
+                        </svg>
+                    </li>
+                </ul>
+            </div>
         </address>
     </div>
 </footer>
