--- a/index.html
+++ b/index.html
@@ -283,18 +283,22 @@
 <!--Футер-->
 <footer class="footer">
     <div class="container">
-        <a href="./index.html" class="logo">Web<span class="logo2">Studio</span>
-        </a>
-        <address>
-            <ul class="adres-nav list">
-                <li class="item">м. Київ, пр-т Лесі Українки, 26
-                </li>
-                <li class="item"><a href="mailto:info@example.com" class="secondary-link">info@example.com</a>
-                </li>
-                <li class="item"><a href="tel:+380991111111" class="secondary-link">+38 099 111 11 11</a></li>
-            </ul>
+           <div class="footer-text">
+            <div>
+                <a href="./index.html" class="logo">Web<span class="logo2">Studio</span>
+                </a>
+                <address>
+                    <ul class="adres-nav list">
+                        <li class="item">м. Київ, пр-т Лесі Українки, 26
+                        </li>
+                        <li class="item"><a href="mailto:info@example.com" class="secondary-link">info@example.com</a>
+                        </li>
+                        <li class="item"><a href="tel:+380991111111" class="secondary-link">+38 099 111 11 11</a></li>
+                    </ul>
+                </address>
+            </div>
             <div class="link-position-footer">
-                <h2>Приєднуйтесь</h2>
+                <h2 class="footer-title">Приєднуйтесь</h2>
                 <ul class="social list">
                     <li class="social-background-footer item">
                         <svg width="20" height="20">
@@ -318,7 +322,7 @@
                     </li>
                 </ul>
             </div>
-        </address>
+           </div>
     </div>
 </footer>
 </body>
