--- a/portfolio.html
+++ b/portfolio.html
@@ -24,8 +24,18 @@
             </ul>
         </nav>
         <ul class="outsite-nav list">
-            <li class="item"><a href="mailto:info@devstudio.com" class="secondary-link">info@devstudio.com</a></li>
-            <li class="item"><a href="tel:+380961111111" class="secondary-link">+38 096 111 11 11</a></li>
+            <li class="item">
+                <a href="mailto:info@devstudio.com" class="secondary-link">
+                    <svg class="icon-enveloper" width="16" height="12">
+                        <use href="./images/icon.svg#icon-envelope"></use>
+                    </svg>
+                    info@devstudio.com</a>
+            </li>
+            <li class="item"><a href="tel:+380961111111" class="secondary-link">
+                    <svg class="icon-smartphone" width="10" height="16">
+                        <use href="./images/icon.svg#icon-smartphone"></use>
+                    </svg>
+                    +38 096 111 11 11</a></li>
         </ul>
     </div>
 </header>
@@ -123,17 +133,46 @@
     <!--Футер-->
     <footer class="footer">
         <div class="container">
-            <a href="./index.html" class="logo">Web<span class="logo2">Studio</span>
-            </a>
-            <address>
-                <ul class="adres-nav list">
-                    <li class="item">м. Київ, пр-т Лесі Українки, 26
-                    </li>
-                    <li class="item"><a href="mailto:info@example.com" class="secondary-link">info@example.com</a>
-                    </li>
-                    <li class="item"><a href="tel:+380991111111" class="secondary-link">+38 099 111 11 11</a></li>
-                </ul>
-            </address>
+            <div class="footer-text">
+                <div>
+                    <a href="./index.html" class="logo">Web<span class="logo2">Studio</span>
+                    </a>
+                    <address>
+                        <ul class="adres-nav list">
+                            <li class="item">м. Київ, пр-т Лесі Українки, 26
+                            </li>
+                            <li class="item"><a href="mailto:info@example.com" class="secondary-link">info@example.com</a>
+                            </li>
+                            <li class="item"><a href="tel:+380991111111" class="secondary-link">+38 099 111 11 11</a></li>
+                        </ul>
+                    </address>
+                </div>
+                <div class="link-position-footer">
+                    <h2 class="footer-title">Приєднуйтесь</h2>
+                    <ul class="social list">
+                        <li class="social-background-footer item">
+                            <svg width="20" height="20">
+                                <use href="./images/icon.svg#icon-instagram-2"></use>
+                            </svg>
+                        </li>
+                        <li class="social-background-footer item">
+                            <svg width="20" height="20">
+                                <use href="./images/icon.svg#icon-twitter-1"></use>
+                            </svg>
+                        </li>
+                        <li class="social-background-footer item">
+                            <svg width="20" height="20">
+                                <use href="./images/icon.svg#icon-facebook-1"></use>
+                            </svg>
+                        </li>
+                        <li class="social-background-footer item">
+                            <svg width="20" height="20">
+                                <use href="./images/icon.svg#icon-linkedin-1"></use>
+                            </svg>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </footer>
 </body>
