--- a/index.html
+++ b/index.html
@@ -121,25 +121,33 @@
                     </div>
                     <div class="link-position">
                         <ul class="social list">
-                            <li class="social-background item">
-                                <svg width="20" height="20">
-                                    <use href="./images/icon.svg#icon-instagram-2"></use>
-                                </svg>
+                            <li class="item">
+                                <a href="" class="social-background item">
+                                    <svg width="20" height="20">
+                                        <use href="./images/icon.svg#icon-instagram-2"></use>
+                                    </svg>
+                                </a>
                             </li>
-                            <li class="social-background item">
-                                <svg width="20" height="20">
-                                    <use href="./images/icon.svg#icon-twitter-1"></use>
-                                </svg>
+                            <li class="item">
+                                <a href="" class="social-background item">
+                                    <svg width="20" height="20">
+                                        <use href="./images/icon.svg#icon-twitter-1"></use>
+                                    </svg>
+                                </a>
                             </li>
-                            <li class="social-background item">
+                            <li class="item">
+                               <a href="" class="social-background item">
                                 <svg width="20" height="20">
                                     <use href="./images/icon.svg#icon-facebook-1"></use>
                                 </svg>
+                               </a>
                             </li>
-                            <li class="social-background item">
-                                <svg width="20" height="20">
-                                    <use href="./images/icon.svg#icon-linkedin-1"></use>
-                                </svg>
+                            <li class="item">
+                                <a href="" class="social-background item" >
+                                    <svg width="20" height="20">
+                                        <use href="./images/icon.svg#icon-linkedin-1"></use>
+                                    </svg>
+                                </a>
                             </li>
                         </ul>
                     </div>
@@ -152,25 +160,33 @@
                     </div>
                     <div class="link-position">
                         <ul class="social list">
-                            <li class="social-background item">
-                                <svg width="20" height="20">
-                                    <use href="./images/icon.svg#icon-instagram-2"></use>
-                                </svg>
+                            <li class="item">
+                                <a href="" class="social-background item">
+                                    <svg width="20" height="20">
+                                        <use href="./images/icon.svg#icon-instagram-2"></use>
+                                    </svg>
+                                </a>
                             </li>
-                            <li class="social-background item">
-                                <svg width="20" height="20">
-                                    <use href="./images/icon.svg#icon-twitter-1"></use>
-                                </svg>
+                            <li class="item">
+                                <a href="" class="social-background item">
+                                    <svg width="20" height="20">
+                                        <use href="./images/icon.svg#icon-twitter-1"></use>
+                                    </svg>
+                                </a>
                             </li>
-                            <li class="social-background item">
-                                <svg width="20" height="20">
-                                    <use href="./images/icon.svg#icon-facebook-1"></use>
-                                </svg>
+                            <li class="item">
+                                <a href="" class="social-background item">
+                                    <svg width="20" height="20">
+                                        <use href="./images/icon.svg#icon-facebook-1"></use>
+                                    </svg>
+                                </a>
                             </li>
-                            <li class="social-background item">
-                                <svg width="20" height="20">
-                                    <use href="./images/icon.svg#icon-linkedin-1"></use>
-                                </svg>
+                            <li class="item">
+                                <a href="" class="social-background item">
+                                    <svg width="20" height="20">
+                                        <use href="./images/icon.svg#icon-linkedin-1"></use>
+                                    </svg>
+                                </a>
                             </li>
                         </ul>
                     </div>
@@ -183,25 +199,33 @@
                     </div>
                     <div class="link-position">
                         <ul class="social list">
-                            <li class="social-background item">
-                                <svg width="20" height="20">
-                                    <use href="./images/icon.svg#icon-instagram-2"></use>
-                                </svg>
+                            <li class="item">
+                                <a href="" class="social-background item">
+                                    <svg width="20" height="20">
+                                        <use href="./images/icon.svg#icon-instagram-2"></use>
+                                    </svg>
+                                </a>
                             </li>
-                            <li class="social-background item">
-                                <svg width="20" height="20">
-                                    <use href="./images/icon.svg#icon-twitter-1"></use>
-                                </svg>
+                            <li class="item">
+                                <a href="" class="social-background item">
+                                    <svg width="20" height="20">
+                                        <use href="./images/icon.svg#icon-twitter-1"></use>
+                                    </svg>
+                                </a>
                             </li>
-                            <li class="social-background item">
-                                <svg width="20" height="20">
-                                    <use href="./images/icon.svg#icon-facebook-1"></use>
-                                </svg>
+                            <li class="item">
+                                <a href="" class="social-background item">
+                                    <svg width="20" height="20">
+                                        <use href="./images/icon.svg#icon-facebook-1"></use>
+                                    </svg>
+                                </a>
                             </li>
-                            <li class="social-background item">
-                                <svg width="20" height="20">
-                                    <use href="./images/icon.svg#icon-linkedin-1"></use>
-                                </svg>
+                            <li class="item">
+                                <a href="" class="social-background item">
+                                    <svg width="20" height="20">
+                                        <use href="./images/icon.svg#icon-linkedin-1"></use>
+                                    </svg>
+                                </a>
                             </li>
                         </ul>
                     </div>
@@ -214,25 +238,33 @@
                     </div>
                     <div class="link-position">
                         <ul class="social list">
-                            <li class="social-background item">
-                                <svg width="20" height="20">
-                                    <use href="./images/icon.svg#icon-instagram-2"></use>
-                                </svg>
+                            <li class="item">
+                                <a href="" class="social-background item">
+                                    <svg width="20" height="20">
+                                        <use href="./images/icon.svg#icon-instagram-2"></use>
+                                    </svg>
+                                </a>
                             </li>
-                            <li class="social-background item">
-                                <svg width="20" height="20">
-                                    <use href="./images/icon.svg#icon-twitter-1"></use>
-                                </svg>
+                            <li class="item">
+                                <a href="" class="social-background item">
+                                    <svg width="20" height="20">
+                                        <use href="./images/icon.svg#icon-twitter-1"></use>
+                                    </svg>
+                                </a>
                             </li>
-                            <li class="social-background item">
-                                <svg width="20" height="20">
-                                    <use href="./images/icon.svg#icon-facebook-1"></use>
-                                </svg>
+                            <li class="item">
+                                <a href="" class="social-background item">
+                                    <svg width="20" height="20">
+                                        <use href="./images/icon.svg#icon-facebook-1"></use>
+                                    </svg>
+                                </a>
                             </li>
-                            <li class="social-background item">
-                                <svg width="20" height="20">
-                                    <use href="./images/icon.svg#icon-linkedin-1"></use>
-                                </svg>
+                            <li class="item">
+                                <a href="" class="social-background item">
+                                    <svg width="20" height="20">
+                                        <use href="./images/icon.svg#icon-linkedin-1"></use>
+                                    </svg>
+                                </a>
                             </li>
                         </ul>
                     </div>
