--- a/index.html
+++ b/index.html
@@ -278,34 +278,46 @@
             <h2 class="htitle">Постійні клієнти</h2>
             <ul class="clients list">
                 <li class="clients-card">
-                        <svg width="106" height="60">
-                            <use href="./images/icon.svg#icon-Logo"></use>
-                        </svg>
+                        <a href="" class="clients-link">
+                            <svg width="106" height="60">
+                                <use href="./images/icon.svg#icon-Logo"></use>
+                            </svg>
+                        </a>
                 </li>
                 <li class="clients-card">
-                        <svg width="106" height="60">
-                            <use href="./images/icon.svg#icon-Logo-1"></use>
-                        </svg>
+                        <a href="" class="clients-link">
+                            <svg width="106" height="60">
+                                <use href="./images/icon.svg#icon-Logo-1"></use>
+                            </svg>
+                        </a>
                 </li>
                 <li class="clients-card">
-                        <svg width="106" height="60">
-                            <use href="./images/icon.svg#icon-Logo-2"></use>
-                        </svg>
+                        <a href="" class="clients-link">
+                            <svg width="106" height="60">
+                                <use href="./images/icon.svg#icon-Logo-2"></use>
+                            </svg>
+                        </a>
                 </li>
                 <li class="clients-card">
-                        <svg width="106" height="60">
-                            <use href="./images/icon.svg#icon-Logo-3"></use>
-                        </svg>
+                        <a href="" class="clients-link">
+                            <svg width="106" height="60">
+                                <use href="./images/icon.svg#icon-Logo-3"></use>
+                            </svg>
+                        </a>
                 </li>
                 <li class="clients-card">
-                        <svg width="106" height="60">
-                            <use href="./images/icon.svg#icon-Logo-4"></use>
-                        </svg>
+                        <a href="" class="clients-link">
+                            <svg width="106" height="60">
+                                <use href="./images/icon.svg#icon-Logo-4"></use>
+                            </svg>
+                        </a>
                 </li>
                 <li class="clients-card">
-                    <svg width="106" height="60">
-                        <use href="./images/icon.svg#icon-Logo-5"></use>
-                    </svg>
+                    <a href="" class="clients-link">
+                        <svg width="106" height="60">
+                            <use href="./images/icon.svg#icon-Logo-5"></use>
+                        </svg>
+                    </a>
                 </li>
             </ul>
 
