--- a/portfolio.html
+++ b/portfolio.html
@@ -150,25 +150,33 @@
                 <div class="link-position-footer">
                     <h2 class="footer-title">Приєднуйтесь</h2>
                     <ul class="social list">
-                        <li class="social-background-footer item">
-                            <svg width="20" height="20">
-                                <use href="./images/icon.svg#icon-instagram-2"></use>
-                            </svg>
+                        <li class="social-footer">
+                            <a href="" class="social-background-footer">
+                                <svg width="20" height="20">
+                                    <use href="./images/icon.svg#icon-instagram-2"></use>
+                                </svg>
+                            </a>
                         </li>
-                        <li class="social-background-footer item">
-                            <svg width="20" height="20">
-                                <use href="./images/icon.svg#icon-twitter-1"></use>
-                            </svg>
+                        <li class="social-footer">
+                            <a href="" class="social-background-footer">
+                                <svg width="20" height="20">
+                                    <use href="./images/icon.svg#icon-twitter-1"></use>
+                                </svg>
+                            </a>
                         </li>
-                        <li class="social-background-footer item">
-                            <svg width="20" height="20">
-                                <use href="./images/icon.svg#icon-facebook-1"></use>
-                            </svg>
+                        <li class="social-footer">
+                            <a href="" class="social-background-footer">
+                                <svg width="20" height="20">
+                                    <use href="./images/icon.svg#icon-facebook-1"></use>
+                                </svg>
+                            </a>
                         </li>
-                        <li class="social-background-footer item">
-                            <svg width="20" height="20">
-                                <use href="./images/icon.svg#icon-linkedin-1"></use>
-                            </svg>
+                        <li class="social-footer">
+                            <a href="" class="social-background-footer">
+                                <svg width="20" height="20">
+                                    <use href="./images/icon.svg#icon-linkedin-1"></use>
+                                </svg>
+                            </a>
                         </li>
                     </ul>
                 </div>
